tests/invalid/type/manual_ex043.pts
function main() : void {
    for (int v in xs) { 0; }
    for (glyph g in s) { 0; }
}
